--- a/vue_project/vue_父子组件.html
+++ b/vue_project/vue_父子组件.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="app">
-		<component1 :parentmsg="msg" @func="getmsgfromson"></component1>
+		<component1 :parentmsg='msg' @func="getmsgfromson"></component1>
 	</div>
 
 	<template id="tmp1">
